# PROYECTO-PROGRA3-STREAMING

./: CMakeLists.txt  EstadoInterfaz.h  EstadosConcretos.h  EstrategiaRelevancia.h  InteraccionObserver.cpp  InteraccionObserver.h  Interface.cpp  Interface.h  InterfazStreaming.cpp  InterfazStreaming.h  MotorBusqueda.cpp  MotorBusqueda.h  MotorBusquedaProxy.cpp  MotorBusquedaProxy.h  ObservadorPerfil.h  PATRONES_DISENO_IMPLEMENTADOS.md  PerfilMemento.cpp  PerfilMemento.h  PreprocesamientoDatos.cpp  PreprocesamientoDatos.h  README.md  main.cpp  peliculasLimpias.csv  wiki_movie_plots_deduped.csv
documentacion/: Informe_Tecnico_PiliFlix.docx  ~$forme_Tecnico_PiliFlix.docx
